# open-science-pipeline

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  wait-for-grobid.sh
src/: citation.py  config.py  document_converter.py  embeddings.py  figure_extractor.py  grobid_client.py  main.py  pdf_processor.py  scraper.py  storage.py  tei_parser.py  vector_db.py
src/vector_stores/: base.py  pinecone_store.py  s3_vectors_store.py
