[project]
name = "open-science-pipeline"
version = "0.1.0"
description = "Scrape, parse, embed and store academic articles from open-science.canada.ca"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    "lxml>=5.2.0",
    "PyMuPDF>=1.24.0",
    "boto3>=1.34.0",
    "pinecone>=5.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]